<resources>
    <string name="app_name">PanBarato</string>
    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="repContrasena">Repetir Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splashPict">Splashing</string>
    <string name="panBarato">PanBarato</string>
    <string name="tcontenido">tcontenido</string>
    <string name="icontenido">icontenido</string>
    <string name="tpresentacion">¿Que es Pan Barato?</string>
    <string name="isplash">isplash</string>
    <string name="descripcion">Pan Barato es la aplicacion que te permitira
        salvar al planeta al evitar el desperdicio de la comida y la optimizacion
        de nuestros recursos naturales </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="tsplash">tsplash</string>
    <string name="Pan">pan_barato</string>
    <string name="pan">Pan Barato</string>
    <string name="tperfil">Informacion Personal</string>
    <string name="tcorreo">correo</string>
    <string name="mostrar">Mostrar Info</string>
    <string name="title_activity_main_navigation">MainActivityNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="general">Pan-Pastel</string>
    <string name="buscar">Buscar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_general_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tbuscar">Fragment Buscar</string>
    <string name="tgeneral">Fragment General</string>
    <string name="tnotificacion">Fragmento Notificaciones</string>
    <string name="tprofile">Fragmento Perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Mapa</string>
    <string name="Rname">Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="description">Descripcion</string>


</resources>
