<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main2Activity"
    tools:showIn="@layout/activity_main2">

    <TextView
        android:id="@+id/tpresentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/tpresentacion"
        android:text="@string/tpresentacion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/icontenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icontenido"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/icontenido"
        app:layout_constraintBottom_toTopOf="@+id/tpresentacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpresentacion"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tcontenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/tcontenido"
        android:text="@string/descripcion"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icontenido" />
</android.support.constraint.ConstraintLayout>