<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PerfilActivity"
    tools:showIn="@layout/activity_perfil">

    <TextView
        android:id="@+id/tcorreo"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginBottom="57dp"
        android:layout_marginTop="42dp"
        android:hint="@string/tcorreo"
        app:layout_constraintBottom_toTopOf="@+id/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tperfil" />

    <TextView
        android:id="@+id/tperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="127dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/tperfil"
        android:text="Informacion de Perfil"
        app:layout_constraintBottom_toTopOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="282dp"
        android:layout_marginEnd="258dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="57dp"
        android:text="@string/mostrar"
        android:onClick="mostrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tcorreo" />
</android.support.constraint.ConstraintLayout>